# Flux

./: .gitignore  CMakeLists.txt  FluxConfig.h.in  README.md
Editor/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Entity.h  Log.cpp  Log.h  MaterialDesc.h  Math.cpp  Math.h  Matrix4f.h  Mesh.h  Model.cpp  Model.h  ModelImporter.cpp  ModelImporter.h  SceneConverter.cpp  SceneConverter.h  SceneDesc.h  SceneExporter.cpp  SceneExporter.h  SceneImporter.cpp  SceneImporter.h  Sky.h  Skybox.h  Skysphere.h  Texture.cpp  Texture.h  Vector2f.cpp  Vector2f.h  Vector3f.h  glad.c
Engine/Includes/GDT/: Exception.h  File.h  Framebuffer.h  Input.h  Math.h  Matrix4f.h  OpenGL.h  Shader.h  Texture.h  TextureUnit.h  Vector2f.h  Vector3f.h  Vector4f.h  Window.h
Engine/Includes/glad/: glad.h
Engine/Libraries/: nvToolsExt64_1.lib
Engine/Libraries/Debug/: GDT.lib
Engine/Libraries/Release/: GDT.lib
Engine/Shaders/: Add.frag  Average.frag  BRDFintegration.frag  Bloom.frag  Blur.frag  BlurFast.frag  ColorGrading.frag  DeferredArea.frag  DeferredDirect.frag  DeferredIndirect.frag  FXAAQuality.frag  Fog.frag  GBuffer.frag  GammaCorrection.frag  IBL.frag  Irradiance.frag  LightShaft.frag  Lighting.frag  Model.vert  Multiply.frag  PointLight.frag  PrefilterEnvmap.frag  Quad.vert  SSAO.frag  SSAOBlur.frag  Shadow.frag  Sky.frag  Skybox.frag  Skybox.vert  Skysphere.frag  Texture.frag  Tonemap.frag
Engine/Source/: Application.cpp  Application.h  AreaLight.h  AssetManager.cpp  AssetManager.h  AttachedTo.h  AveragePass.cpp  AveragePass.h  CMakeLists.txt  Camera.cpp  Camera.h  Component.h  Cubemap.h  DeferredRenderer.cpp  DeferredRenderer.h  DirectionalLight.h  Entity.h  Face.h  File.h  FirstPersonView.cpp  FirstPersonView.h  ForwardRenderer.cpp  ForwardRenderer.h  FpsCounter.cpp  FpsCounter.h  FpsListener.h  Framebuffer.h  IrradianceMap.h  Log.cpp  Material.cpp  Material.h  MaterialLoader.cpp  MaterialLoader.h  Math.cpp  Matrix4f.cpp  Matrix4f.h  Mesh.h  MeshRenderer.h  Path.h  PointLight.h  (+29 more)
Engine/Source/Exceptions/: ComponentNotFoundException.h  ShaderCompilationException.h  ShaderLinkException.h
Engine/Source/Input/: Input.cpp  Input.h
Engine/Source/Renderer/: AddPass.cpp  AddPass.h  AveragePass.cpp  AveragePass.h  BloomPass.cpp  BloomPass.h  ColorGradingPass.cpp  ColorGradingPass.h  DirectLightPass.cpp  DirectLightPass.h  FogPass.cpp  FogPass.h  FxaaPass.cpp  FxaaPass.h  GBuffer.h  GGX.h  GammaCorrectionPass.cpp  GammaCorrectionPass.h  GaussianBlurPass.cpp  GaussianBlurPass.h  ImageBasedRendering.cpp  ImageBasedRendering.h  IndirectLightPass.cpp  IndirectLightPass.h  LightShaftPass.cpp  LightShaftPass.h  LtcLightPass.cpp  LtcLightPass.h  MultiplyPass.cpp  MultiplyPass.h  RenderState.cpp  RenderState.h  SSAOPass.cpp  SSAOPass.h  SSAORendering.cpp  SSAORendering.h  SkyPass.cpp  SkyPass.h  TonemapPass.cpp  TonemapPass.h
Engine/Source/Util/: File.h  Log.h  Math.cpp  Math.h  Matrix4f.h  Path.cpp  Path.h  Size.h  String.h  Vector3f.cpp  Vector3f.h
Engine/res/: IBL.frag  PrefilterEnvmap.frag  basic.frag  basic.vert  diffuseIBL.frag  envmap.vert  skybox.frag  skybox.vert
TestProject/: Application.cpp  Application.h
res/: basic.frag  basic.vert
src/: Application.cpp  Application.h  AssetManager.h  Camera.cpp  Camera.h  Component.h  ComponentNotFoundException.h  Entity.h  ForwardRenderer.cpp  ForwardRenderer.h  Log.cpp  Log.h  Material.h  MaterialLoader.cpp  Math.h  Matrix4f.h  Mesh.h  MeshRenderer.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Path.cpp  Path.h  Renderer.cpp  Renderer.h  Scene.h  SceneLoader.cpp  SceneLoader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  String.h  TextureLoader.cpp  TextureLoader.h  Transform.h  Vector2f.h  Vector3f.cpp  Vector3f.h  (+3 more)
